# obsidian-ironsworn

./: .gitignore  README.md  convert-oracles.py  pyproject.toml
obsidian/: IronswornOracle.md  IronswornOracleTables.md  StarforgedOracle.md  StarforgedOracleTables.md
