[tool.poetry]
name = "obsidian-ironsworn"
version = "0.1.0"
description = ""
authors = ["Oscar Vilaplana <dev@grimborg.io>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
